--- a/index.html
+++ b/index.html
@@ -10,17 +10,10 @@
 
 <body >
 	<div id="wrapper">
-		<h1>MAHDA.COM.AU</h1>
+		<h1>MAHDA.COM.AU</h1><br />
+<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 
-  
-				
-				<br />
-
-	
- 
-
-				<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-<div class="pa-carousel-widget" style="width:100%; height:480px; display:none;"
+<div class="pa-carousel-widget" style="width:800px;height:480px;margin:0px auto;display:none;"
   data-link="https://photos.app.goo.gl/3KERwRboRG2MGaXK7"
   data-title="Scream Photography"
   data-description="83 new items added to shared album"
@@ -110,48 +103,71 @@
   <object data="https://lh3.googleusercontent.com/pw/ADCreHcYcRNpq3xAFPx96rKQjRDV18aS3d9bHMJ0RPXA0jn2y4dpMApW6MMcmjWD4p7VNEjnNQ4S6hgsW2jLwbGtFnuhswy0sqzj0Mt12Xvs2rW0kcNkXuU=w640-h480"></object>
 </div>
 <br /><br />
-<iframe frameborder="0" src="https://itch.io/embed/1768212?linkback=true&amp;dark=true" width="80%"><a href="https://mahda.itch.io/scream">SCREAM by mahda</a></iframe>
+
+
+<h2>Who is Mahda Christopher Greene-Moon?</h2>
+<p>Mahda Christopher Greene-Moon is a 44 year old husband and father of 2 who currently works as a full time caregiver. He is also a digital creator and software developer. He is also an accomplished musician and composer.</p>
+
+<h2>What is Mahda?</h2>
+<p>Mahda is my name, It derives from my Celtic roots. My birth name was Christopher Greene. After marrying my full name is now Mahda Christopher Greene-Moon.</p>
+
+<h2>What is Mahda up to?</h2>
+<p>I have been building and “promoting” my open source speedway community racing game.<br />
+What the heck is that? Well it’s my “Homage” to what was, my favourite place to be growing up. And with the life skills that I acquired and developed, over my almost half a century of existence, I wanted to build something that could be appreciated, liked and even shared for free. And I do mean free, as in Libre. Not Gratis. </p>
+
+<p><i>“Free software" means software that respects users' freedom and community. Roughly, it means that the users have the freedom to run, copy, distribute, study, change and improve the software. Thus, "free software" is a matter of liberty, not price. To understand the concept, you should think of "free" as in "free speech," not as in "free beer". We sometimes call it "libre software," borrowing the French or Spanish word for "free" as in freedom, to show we do not mean the software is gratis.
+<i> — <b>The Free Software Foundation</b></p>
+
+<p>Basically, I had this idea when i was 13 or 14 to make a speedway game. You see, I had been attending Premier Speedway since i could remember. And I mean, almost EVERY SEASON. from about 6 months old onwards. My brother and I would spend the entire day getting so excited. We even invented our own version of “fasting” to ensure we could fit as many Premier doughnuts in our tiny little belly’s as we could. Once we even decided it was a good idea to sip on salt water to make ourselves even more hungry. Our logic was that, if we were hungrier, then we’d enjoy those Premier canteen snacks just “that much” more. (we actually lost out appetite that night). </p>
+
+<p>We also loved the Orange/Brown mud that made it’s way home with us, along with half a dozen, or so, used tear offs. We had collected them religiosuly throughout the course of the night. That mud would stalk us all week. We would spend the following week finding hardened, brown crumbs in every conceivable nook and cranny. But, every time we found those crumbs, we just broke out into a stupid a grin and began excitedly proclaiming  “ohhh.. Remember the other night when…”.  And would launch into a very dramatic, albeit extremely accurate, in our humble opinion, retelling of the countless moments of awe and adrenaline we had both experienced at the speedway, just that previous weekend.</p>
+
+<p>Growing up, I also had the opportunity to be exposed to, and learn a lot from, technology. Mostly video,multimedia & computer skills. However, I never used those skills outside of the environment i was raised in. Until recently. So It has been recently that I have decided to begin to share what i can with the greater community, ergo, the inception of <b><i>mahda.com.au</i></b></p>
+
+
+<iframe frameborder="0" src="https://itch.io/embed/1768212?linkback=true&amp;dark=true" width="576"><a href="https://mahda.itch.io/scream">SCREAM by mahda</a></iframe>
 <br />
 <a href="https://www.facebook.com/groups/screamracing">Facebook Page</a> |
 <a href="https://www.youtube.com/@screamracing">Youtube Channel</a> |
-
+<br />
 <!-- <a target="_blank" href="http://scr.mahda.com.au/">Link to Early 2d prototype</a> -->
+<a href='https://play.google.com/store/apps/dev?id=8540520771818199657&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+<img width="576" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
 
-				<a href='https://play.google.com/store/apps/dev?id=8540520771818199657&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
-				<h3 class="floating">Other Areas of Interest</h3>	
-				<p class="normal">
-				<h2>Music</h2>
-				Guitar
-				Bass
-				Ukelele
-				Keyboard 
-				Organ
-				Piano
-				Drums
-				Vocal
-				Harmonica
-				Recorder
-				<br />
-				DAW (Digital Audio Workstation)
-				Sampling
-				Sythesis
-				Composing
-				Ambience
-				BGM
-				Voice over
-				FX		
-				</p>
-				
-				<h2>Digital Visual Art</h2>
-				Digital Paint
-				3d Modeling
-				Texturing
-				Kinetic Typography
-				Video Editing, Compostion & Rendering
-
-				<br /><br />
-				<h3>Contact Inforrmation</h3>	
-				<a href="mailto:mahdagreenemoon@gmail.com">E-Mail: &#9993 mahdagreenemoon@gmail.com</a>	
+<h3 class="floating">Other Areas of Interest</h3>	
+	<p class="normal">
+	<h2>Music</h2>
+	Guitar,
+	Bass,
+	Ukelele,
+	Keyboard ,
+	Organ,
+	Piano,
+	Drums,
+	Vocal,
+	Harmonica,
+	Recorder,
+	<br />
+	DAW (Digital Audio Workstation),
+	Sampling,
+	Sythesis,
+	Composing,
+	Ambience,
+	BGM,
+	Voice over,
+	FX
+	</p>
+	<p class="normal">
+	<h2>Digital Visual Art</h2>
+	Digital Paint,
+	3d Modeling,
+	Texturing,
+	Kinetic Typography,
+	Video Editing, Compostion & Rendering
+	</p>
+	<br /><br />
+	<h3>Contact Inforrmation</h3>	
+	<a href="mailto:mahdagreenemoon@gmail.com">E-Mail: &#9993 mahdagreenemoon@gmail.com</a>	
 
 </div>
 <footer>Thanks</footer>
