--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html><html lang="en">
 <head>
+
 	<meta charset="utf-8" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	<title>Mahda's Online Ocean of Numbers</title>
 	<script src="js/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/style.css" />
+	
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGWXJJ83MP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGWXJJ83MP');
+</script>
 </head>
 
 <body >
