--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ What the heck is that? Well it’s my “Homage” to what was, my favourite pla
 <a href="https://www.youtube.com/@screamracing">Youtube Channel</a> |
 <br />
 <!-- <a target="_blank" href="http://scr.mahda.com.au/">Link to Early 2d prototype</a> -->
+<img width="576" src="images/sream_two_logo_icon_google.jpg" /><br />
 <a href='https://play.google.com/store/apps/dev?id=8540520771818199657&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
 <img width="576" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
 
