--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ What the heck is that? Well it’s my “Homage” to what was, my favourite pla
 
 <p>We also loved the Orange/Brown mud that made it’s way home with us, along with half a dozen, or so, used tear offs. We had collected them religiosuly throughout the course of the night. That mud would stalk us all week. We would spend the following week finding hardened, brown crumbs in every conceivable nook and cranny. But, every time we found those crumbs, we just broke out into a stupid a grin and began excitedly proclaiming  “ohhh.. Remember the other night when…”.  And would launch into a very dramatic, albeit extremely accurate, in our humble opinion, retelling of the countless moments of awe and adrenaline we had both experienced at the speedway, just that previous weekend.</p>
 
-<p>Growing up, I also had the opportunity to be exposed to, and learn a lot from, technology. Mostly video,multimedia & computer skills. However, I never used those skills outside of the environment i was raised in. Until recently. So It has been recently that I have decided to begin to share what i can with the greater community, ergo, the inception of <b><i>mahda.com.au</i></b></p>
+<p>Growing up, I also had the opportunity to be exposed to, and learn a lot from, technology. Mostly video,multimedia & computer skills. However, I never used those skills outside of the environment i was raised in. Until recently. So It has been recently that I have decided to begin to share what i can with the greater community, ergo, the inception of <b><i>mahda.com.au</i></b>. Which is far cry from my <a href="oldlife.html">old life</a></p>
 
 
 <iframe frameborder="0" src="https://itch.io/embed/1768212?linkback=true&amp;dark=true" width="576"><a href="https://mahda.itch.io/scream">SCREAM by mahda</a></iframe>
@@ -157,9 +157,14 @@ What the heck is that? Well it’s my “Homage” to what was, my favourite pla
 <img width="576" src="images/sream_two_logo_icon_google.jpg" /><br />
 <a href='https://play.google.com/store/apps/dev?id=8540520771818199657&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
 <img width="576" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+<br />
+<br />
 
 <h3 class="floating">Other Areas of Interest</h3>	
 	<p class="normal">
+	<h2>Computers</h2>
+	<a href="mchap.html">Mahda's Tech Page</a>
+
 	<h2>Music</h2>
 	Guitar,
 	Bass,
