--- a/mchap.html
+++ b/mchap.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Mc Happy</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGWXJJ83MP"></script>
 <link rel="stylesheet" href="css/reset.css" />
 <style>
 html{
