--- a/oldlife.html
+++ b/oldlife.html
@@ -39,6 +39,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/I0GVZeNYucg?si=M8tVToZ73ucpGJdF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br />
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yr2NjgM8feI?si=6Oj1BolHdJtVJfUr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<br />
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=gMSC0_1ZaRJj7Ke_&amp;list=PLNJX0poVSxy55RqbTy7_q66qRD-SXQber" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </div>
 <footer>Thanks</footer>
 
