--- a/unfairtelegram.html
+++ b/unfairtelegram.html
@@ -41,7 +41,136 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	a <b>&lt;SCRIPT&gt; TAG</b> containing a <b>&lt;![--CDATA[]]&gt; TAG</b> containing a <b>JSON</b>  <b>OBJECT</b> through a <b>"text"</b> property (usually in an urlencoded string)
 </p>
 <br />
-<form><label>Host:</label><input type="text" width="80" /><button value="go">GO</button><br /><br/><textarea cols="80" rows="10"> </textarea></form>
+<form><label>Host:</label><input type="text" width="80" value="https://www.standard.net.au/story/8433258/james-mcfadden-on-the-challenges-future-of-australian-speedway/"/><button value="go">GO</button><br /><br/><textarea cols="80" rows="10">
+	SPEEDWAY Australia James McFadden is passionate about his sport. He doesn't
+like where it finds itself.
+
+The Australian sprintcar scene is in a state of flux. Complex closures, late
+finishes, track_concerns, a_lack_of_prize_money and the demise of a national
+series have those most invested questioning its future. McFadden - one_of_the
+world's_elite_drivers fresh from his most successful season on America's World
+of Outlaws - has returned to Australia for the summer worried about the sport's
+direction. The articulate competitor knows there is no quick fix, nor is he out
+to question anyone's commitment. But the Warrnambool-based driver is eager to
+see changes - on and off the track - which will help drive the sport forward
+and encourage the next generation to invest.
+
+"A lot of people forget we're an entertainment industry and I think once we
+promote us as an entertainment industry I think we're going to be a little
+better off," McFadden told The Standard.
+
+Earlier, family-friendly finish times, an increase in prize money down the
+fields and improved facilities are priorities, according to McFadden. He also
+believes the return of a national series - think World Series Sprintcars -
+would give competitors a goal to strive for while also providing a pathway for
+the next generation. Then there's things like entertainment, perhaps a band
+could play in between races? A playground for children and food vans with a
+selection of delicacies from across the globe could also appeal to a wider
+audience. "I think the opportunity is there. Our product is unbelievable - you
+can see all the racing," he said.
+
+"I think we need to shorten the races up, we can't be there past 9.30, we have
+to make it a family sport again. "I don't watch cricket, I can honestly sit
+here and say that, but I could go to a twenty20 game and enjoy it.
+
+"We might be able to attract a different demographic (if it finishes earlier)
+and then the sponsors will come that way as well." McFadden believes speedway
+is putting hurdles in front of itself as it battles with other sporting markets
+for its share of exposure. Promotion is king, he says. "Unfortunately times
+change and unfortunately speedway in Australia hasn't changed with the times.
+As soon as they figure that out I think we're going to be fine," he said. "We
+need to get some more younger blood into the promotional side of things, into
+the way speedways are run, into the way the formats are. "I think once we do
+that, without being disrespectful to the people who built the sport to what we
+know now, once we work together, it will be a lot better. "There's a lot of
+things that are done the same way they were done in the '90s and that's not the
+way our teams are run anymore. "You can look in the pits and there's five or
+six hundred thousand dollar operations and that wasn't like that back then. "I
+think team-wise, driver-wise (people) have stepped their presentation up. I
+think 60 to 80 per cent of cars in the pits are as good as an outlaw car in
+America." Sprintcar racing can often stretch from 5pm into the early hours of
+the morning with weather and crashes pushing programs out. Tyres can cost up to
+$600 each and sometimes prize money won't even cover that.
+
+"It is so expensive over here right now with the way the dollar is. We have to
+look at formats, whether that's a tyre rule or a different way to keep the cost
+down," McFadden said. "The promoters need to make money for us to make money.
+It works hand in hand but right now I don't think the races pay enough to cover
+the cost of one tyre, let alone four. "It doesn't need to be $20,000 to win
+every race but it needs to at least pay enough for someone to pay for a set of
+tyres.
+
+"I don't see a lot of the tracks going out there and chasing big sponsorship
+money and I don't think there is any reason why us as a sport shouldn't be able
+to attract big organisations." McFadden has a newfound appreciation for the
+media and promotional side of the sport, having linked up with Warrnambool's
+Tim Hodges and his Hodges Motorsport team for the first time last summer.
+Hodges is a producer atFox Footy and knows the inner workings of the media
+game. McFadden said the sprintcar industry needed to know how to sell itself.
+"I have been in this sport a long time and I can put my hand up and say I was
+just going through the motions and doing it and was earning a living," he said.
+"But I wish I knew what I do now five, six, seven years ago and I could have
+built my brand a lot bigger and made it more of a successful career in winnings
+and being able to make a living out of racing. "I think a guy like Jock
+(Goodyer) or Lockie McHugh who are racing 40 times a year should be able to
+earn enough money to buy a house and I know if you're not winning those races
+you're not going to be able to do that." Track surfaces are another point of
+contention at present. McFadden's home-track - Allansford's Premier Speedway,
+the home of the Flying Horse Bar and Brewery Grand Annual Sprintcar Classic -
+has found itself in the firing line from drivers. Goodyer - one of the
+competition's rising stars -labelled_it_"treacherous"after its season-opener in
+early November. McFadden knows there "is a science" to it. "You're never going
+to keep everyone happy, that's the number one rule in sprintcar racing and dirt
+tracks," he said. "There's normally one happy guy and that's the guy who wins
+the race. "But at the end of the day I think Premier need to do a lot
+different. I think they might get a couple of races that are good and then it
+gives them false hope for the next one." McFadden said too many variables were
+at play at Premier.
+
+"It's not as easy as changing the surface and it's all good. It's probably one
+of the skinniest tracks we race on and the dirt on it creates a monster," he
+said. "When they get it right, it's great. But the percentage of getting it
+right is pretty tough for them.
+
+"I hope Premier start to listen and take notes from people. They have a lot of
+people in this town that have done a lot of racing - Jamie (Veal), who is also
+a machine operator, myself who has been to 600, 700 race tracks in the world,
+you've got Jack Lee who races and works with dirt (as an excavator). "I think
+there is a lot of people who want to see the right thing happen because the
+race on the weekend is not affordable for any driver or car owner to do."
+McFadden is home after his most successful season on the world's best sprintcar
+tour with Roth Motorsport. He had six World of Outlaws victories and seven in
+total, crisscrossing the country in a campervan with partner Zoe and son Mav,
+who turns three in February. "It has its great moments - the last week we were
+there we decided instead of driving all the way to Charlotte and to sit in
+Charlotte for the week, we drove down to Florida and parked it on the beach for
+three days," he said of his home on wheels. "The other moments where we drive
+40 hours and are staying in a Walmart car park, they're the nights I miss
+having a home." On track it was a successful season. "Everything clicked. It
+was a solid year. I sit here a little disappointed with six, I think we could
+have had 10 but to be in that position and be able to win those races is half
+the battle," McFadden said. "The plan is to go back, whether we do or not I am
+not sure. It is still up in the air right now. "You have to have the right team
+and everyone surrounding you otherwise you're wasting your time. "As long as
+all those factors are right I'd definitely want to go back and have another go
+at it."
+
+There was one blight - a four-race ban for a tyre issue. It still doesn't sit
+right with McFadden.
+
+"It was a tough deal. We as a team did a lie detector test and we all passed
+that," he said.
+
+"We all passed everything to say we didn't do it. I am not saying the tyre on
+the car wasn't illegal but our team itself didn't purchase the tyre knowing it
+was illegal and we didn't alter the way the tyre was chemically at all.
+"They're the guys I trust with my life for 80 nights of the year and if they
+said they didn't do it then I believe them."
+
+McFadden will launch his Australian season in Max's Race at Premier Speedway on
+December 16, 2023.
+
+	 </textarea></form>
 </div>
 <P>
 One can think of an <b>object</b> as an <b>associative array</b> (a.k.a. map, dictionary, hash, lookup table). The <b>keys</b> in this array are the names of the object's <b>properties.</b>
