--- a/unfairtelegram.html
+++ b/unfairtelegram.html
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="wrapper">
-		<h1>MAHDA.COM.AU</h1><br />
+		<a href="https://mahda.com.au/"><h1>MAHDA.COM.AU</h1></a><br />
 
 <h2>Today's Information provided freely by:</h2> 
 <p style="font-size:1em; font-family:monospace;text-align:center;">
